# google-finance-mcp

./: .gitignore  LEGAL.md  README.md  pyproject.toml
.github/workflows/: prepare-release.yml  release.yml
packaging/pyinstaller/: entrypoint.py
scripts/: build-linux-release.sh  build-macos-release.sh  build-windows-release.ps1  update-readme-release-version.py
src/google_finance_mcp/: __init__.py  client.py  key_statistics.py  quote_holdings.py  rpc_metadata.py  server.py
src/google_finance_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_client.py  test_server.py
