[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "google-finance-mcp"
version = "0.1.1"
description = "MCP server for Google Finance's internal batchexecute RPCs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
release = [
  "pyinstaller>=6,<7",
]

[project.scripts]
google-finance-mcp = "google_finance_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
